fin de la création de la page d accueil + des images

--- a/public/style.css
+++ b/public/style.css
@@ -23,9 +23,11 @@ input[type=number] {
 }
 .custom-bg {
     background-color: #2ec1ac;
+    border: 1px solid #2ec1ac;
 }
 .custom-bg:hover {
     background-color: #279e8c;
+    border-color: #279e8c;
 }
 .availability-form {
     margin-top: -50px;
