--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,3 +1,8 @@
+:root {
+    --teal: #2ec1ac;
+    --teal_hover: #279e8c;
+}
+
 * {
     font-family: 'Poppins', sans-serif;
 }
@@ -22,12 +27,12 @@ input[type=number] {
     object-fit: cover; /* Ajuste l'image pour remplir le conteneur sans déformation */
 }
 .custom-bg {
-    background-color: #2ec1ac;
-    border: 1px solid #2ec1ac;
+    background-color: var(--teal);
+    border: 1px solid var(--teal);
 }
 .custom-bg:hover {
-    background-color: #279e8c;
-    border-color: #279e8c;
+    background-color: var(--teal_hover);
+    border-color: var(--teal_hover);
 }
 .availability-form {
     margin-top: -50px;
